2006-08-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/main.cpp, src/AMainWindow.h, src/AMainWindow.cpp:
	Switch back to custom main window -- easier to add slots for commands.

	* src/AGLWidget.h, src/AGLWidget.cpp: Add support for rendering GL
	display lists -- renderer classes should generate a display list
	and pass it off to the widget.

2006-08-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/avogadro.ui: Use QtDesigner to layout some menu items and
	toolbar.

	* src/main.cpp, src/AMainWindow.cpp, src/avogadro.pro: Use it.


